/*
 * $Id: ChangeLog,v 1.71 2002/02/01 01:05:56 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-01-31 17:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    * Corrected typo.

2002-01-31 17:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/!pack_bin.bat
  * bin/bld.bat
    * Minor adjustements.
  * source/vm/codebloc.c
    * Added missing null.
  * source/vm/arrays.c
    * Optimized hb_itemClear() to hb_itemRelease() in hb_arrayReleaseGarbage()

2002-01-31 14:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/workarea.c
    * Minor correction to recent correction of string conversion.

2002-01-31 08:40 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx1.c
     ! fixed bug with append and empty keys

2002-01-30 21:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + source/rtl/cstr.prg
    + New file to host CStr() function

  * makefile.bc
  * makefile.vc
  * source/rtl/Makefile
    + Added new cstr.prg to RTL productions

  * source/rtl/traceprg.prg
    - Removed CStr() to minimize linking conflicts.

2002-01-30 21:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/traceprg.prg
    - Removed INIT PROCEDURE InitTrace()
  * source/vm/hvm.c
    + Added trace.log file creation to hb_vmInit()

2002-01-30 21:06 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + source/rtl/traceprg.prg
    + New file with TraceLog() functionality, and new CStr() (converts any type to a String).
      /* Tracing info can be turned ON or OFF with new SET TRACE ON|OFF command (ON by default). */

  * makefile.bc
  * makefile.vc
  * source/rtl/Makefile
    + Added support for new traceprg.prg

  * include/hbset.h
  * include/set.ch
  * source/rtl/set.c
    + Support for new HB_SET_TRACE ( _SET_TRACE ) ON by default.

  * source/pp/pptable.c